--- a/index.html
+++ b/index.html
@@ -7,30 +7,46 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div>
+    <article class="container">
+      <section class="scoreContainer">
         <h3>HOME</h3>
-        <div class="scoreBoard scoreBoardHome">
+        <section class="scoreBoard scoreBoardHome">
           <h1 class="score scoreHome">0</h1>
-        </div>
+        </section>
         <section class="btnContainer">
           <button onclick="addScore('home', 1)">+1</button>
           <button onclick="addScore('home', 2)">+2</button>
           <button onclick="addScore('home', 3)">+3</button>
         </section>
-      </div>
-      <div>
+      </section>
+
+      <section class="scoreContainer">
         <h3>GUEST</h3>
-        <div class="scoreBoard scoreBoardGuest">
+        <section class="scoreBoard scoreBoardGuest">
           <h1 class="score scoreGuest">0</h1>
-        </div>
+        </section>
         <section class="btnContainer">
           <button onclick="addScore('guest', 1)">+1</button>
           <button onclick="addScore('guest', 2)">+2</button>
           <button onclick="addScore('guest', 3)">+3</button>
         </section>
-      </div>
-    </div>
+      </section>
+
+      <button class="resetBtn">RESET SCORE</button>
+      
+      <section class="resultContainer">
+          <h3>lastest result:</h3>
+          <div class="flex">
+            <p>Home:</p>
+            <p class="resultHome">2</p>
+          </div>
+          <div class="flex">
+            <p>Guest:</p>
+            <p class="resultGuest"></p>
+          </div>
+        </div>
+      </section>
+    </article>
     <script src="index.js"></script>
   </body>
 </html>
